CAUSEWAY-3636: fixes integ test